--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>.: Raul Gacrcia Ameyugo - Curriculum Vitae :.</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel= "canonical" href="http://raul.garcia.ameyugo.eu/"/>
+    <meta name="description" content="Desarrolador web. Fullstack developer.">
+    <meta name="keywords" content="Desarrollo web, web developer, fullstack, fullstack developer"/>
+    <meta name="author" content="ranet101@gmail.com">
+    <title>.: Raul Garcia Ameyugo - Curriculum Vitae :.</title>
   </head>
   <body>
     <div id="app"></div>
