--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,14 @@
   </head>
   <body>
     <div id="app"></div>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4YTDF0VV0P"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-4YTDF0VV0P');
+    </script>
   </body>
 </html>
